# rustyshell

./: .gitignore  Cargo.toml  Readme.md
.github/: dependabot.yml
.github/workflows/: autorelease  autorelease.yml  rust.yml
src/: autocomplete.rs  built_ins.rs  command_handler.rs  config_handler.rs  main.rs
src/built_ins/: autocomplete.rs  cd.rs  command_handler.rs  filename_expansion.rs  mod.rs  variable_handler.rs
src/config_handler/: prompt.rs
src/handler/: command_handler.rs  mod.rs
