[package]
name = "rustyshell"
version = "0.1.5"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
whoami = "1.4.1"
rustyline = { version = "13.0.0", features = ["with-file-history", "rustyline-derive", "derive"] }

