[package]
name = "rustyshell"
version = "0.1.8"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
whoami = "1.4.1"
rustyline = { version = "13.0.0", features = ["with-file-history", "rustyline-derive", "derive"] }
ctrlc = "3.4.2"