[package]
name = "rustyshell"
version = "0.2.1"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
whoami = "1.5.1"
rustyline = { version = "15.0.0", features = ["with-file-history", "rustyline-derive", "derive"] }
ctrlc = "3.4.4"
shellwords = "1.1.0"
